--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,8 +3,8 @@
 @import "tailwindcss";
 
 @theme {
-  --color-primary #2563eb;
-  --color-secondary #fbbf24;
+  --color-primary: #2563eb;
+  --color-secondary: #fbbf24;
 }
 
 
